--- a/coba.html
+++ b/coba.html
@@ -6,6 +6,8 @@
     <title>Hello World</title>
 </head>
 <body>
-    <p>Coba</p>
+    <p>Coba 1</p>
+    <p>Coba 2</p>
+    <p>Coba 3</p>
 </body>
 </html>
